# status-bot

./: .gitignore  .gitmodules  Cargo.toml  pyoxidizer.toml  settings.yml
pyembed/: build.rs
src/: datastore.rs  display.rs  main.rs  settings.rs  telegram.rs
