[package]
name = "testapp"
version = "0.1.0"
authors = ["Paul Colusso <paulcolusso@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
telebot = "0.3.0"
futures = "0.1.28"
epd-waveshare = { path = "epd-waveshare" }
embedded-graphics = "0.5.1"
embedded-graphics-simulator = "0.1.0"
rocksdb = "0.12.2"